force-app/main/default/objects/Organization_Communication__c/Organization_Communication__c.object-meta.xml
<CustomObject>
    <label>Organization Communication</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Organization Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>