force-app/main/default/objects/Organization_Communication__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Master-details relationship to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Communications</relationshipLabel>
    <relationshipName>Organization_Communications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>