force-app/main/default/objects/Organization_Communication__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>This field will store the emaill address corresponding to the Subtype value</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>