force-app/main/default/objects/Organization_Communication__c/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>Unique identifier</description>
    <externalId>true</externalId>
    <label>MDM Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>