force-app/main/default/objects/Organization_Communication__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will store the phone number corresponding to the subtype value</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>