force-app/main/default/objects/Organization_Communication__c/fields/Social_Media_Handler__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Handler__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will store the social media Userid corresponding to the subtype</description>
    <label>Social Media Handler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>