force-app/main/default/objects/Organization_Communication__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This is the subtype corresponding to Type field</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Phone</fullName>
            </value>
            <value>
                <fullName>Secondary Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other1</fullName>
            </value>
            <value>
                <fullName>Other2</fullName>
            </value>
            <value>
                <fullName>Other3</fullName>
            </value>
            <value>
                <fullName>Other4</fullName>
            </value>
            <value>
                <fullName>Primary Email</fullName>
            </value>
            <value>
                <fullName>Secondary Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Pinterest</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>KakaoTalk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>