force-app/main/default/objects/Organization_Communication__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field shall store the timestamp when the latest KAFKA request is received</description>
    <inlineHelpText>This field shall store the timestamp when the latest KAFKA request is received</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>